// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component should render a component 1`] = `
<div
  className="sticky-top main-navbar"
>
  <nav
    className="navbar navbar-expand-sm navbar-light bg-light main-nav"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      <img
        alt="logo"
        className="logo"
        src={Object {}}
      />
    </a>
    <button
      className="navbar-toggler"
      data-target="#collapsibleNavbar"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="collapsibleNavbar"
    >
      <Connect(UserNavigation) />
    </div>
  </nav>
  <hr
    className="my-0 nav-divider"
  />
  <nav
    className="navbar container bg-light categories"
  >
    <a
      className="nav-link"
      href="#"
    >
      Science
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Technology
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Nature
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Music
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Religion
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Business
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Education
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Art
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Relationship
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Food
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Health
    </a>
  </nav>
</div>
`;

exports[`Header Component should render the header component correctly 1`] = `
<div
  className="sticky-top main-navbar"
>
  <nav
    className="navbar navbar-expand-sm navbar-light bg-light main-nav"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      <img
        alt="logo"
        className="logo"
        src={Object {}}
      />
    </a>
    <button
      className="navbar-toggler"
      data-target="#collapsibleNavbar"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="collapsibleNavbar"
    >
      <GuestNavigation
        showLoginModal={[MockFunction]}
        showSignupModal={[MockFunction]}
      />
    </div>
  </nav>
  <hr
    className="my-0 nav-divider"
  />
  <nav
    className="navbar container bg-light categories"
  >
    <a
      className="nav-link"
      href="#"
    >
      Science
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Technology
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Nature
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Music
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Religion
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Business
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Education
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Art
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Relationship
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Food
    </a>
    <a
      className="nav-link"
      href="#"
    >
      Health
    </a>
  </nav>
</div>
`;
